--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,10 +17,19 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react",
+    "outDir": "lib",
+    "declaration": true,
+    "sourceMap": true,
+    "declarationMap": true
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "**/*.stories.@(ts|tsx)",
+    "**/*.stories.d.@(ts|tsx)",
+    "**/*.test.@(ts|tsx)",
+    "./src/setupTests.ts"
   ]
 }
