--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "esnext"
     ],
     "allowJs": false,
+    "checkJs": false,
+    "emitDeclarationOnly": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -28,9 +30,10 @@
     "src"
   ],
   "exclude": [
-    "**/*.stories.@(ts|tsx)",
-    "**/*.stories.d.@(ts|tsx)",
-    "**/*.test.@(ts|tsx)",
+    "./src/**/*.stories.ts",
+    "./src/**/*.stories.tsx",
+    "./src/**/*.stories.d.ts",
+    "./src/**/*.stories.d.tsx",
     "./src/setupTests.ts"
   ]
 }
